<resources>
    <string name="app_name" translatable="false">ChatApp</string>


    <!--    Tests Strings-->

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="test" translatable="false">test</string>
    <string name="test_name" translatable="false">Test Name</string>
    <string name="points" translatable="false">%d pts</string>

    <!--    Adapters Strings-->

    <string name="audio">Audio (%s)</string>
    <string name="you">You</string>


    <!--    Notifications-->

    <string name="server_opened">Server opened</string>
    <string name="server_configs">Ip address: %s : %d</string>
    <string name="stop">Stop</string>
    <string name="reply">Reply</string>
    <string name="received_audio">Audio: %s</string>
    <string name="received_photo">Received a photo</string>
    <string name="joined_chat">Joined in the Chat</string>
    <string name="left_the_chat">Left the Chat</string>


    <!--    ActionBar-->

    <string name="chat" translatable="false">Chat</string>


    <!--    BottomSheets Strings-->
    <string name="share">Share:</string>
    <string name="generate_qr_code">Generate\nQrCode</string>
    <string name="share_link">Share\nLink</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>


    <!--   Warnings-->

    <string name="port_error">Please, insert a port number</string>
    <string name="name_error">Please, insert a name</string>
    <string name="ip_error">Please, insert a ip</string>
    <string name="server_doesnt_exists">Server Doesn\'t exists</string>


    <!--    QRCode Fragment-->

    <string name="error_name" translatable="false">ERROR NAME</string>


    <!--    Chat Fragment-->

    <string name="server_disconnected">Server disconnected</string>
    <string name="game_started">Game started. Swipe up</string>
    <string name="message_blank">Message cannot be blank</string>
    <string name="your_move">Your move. You are %s</string>
    <string name="invite_rejected">Player rejected your invite</string>
    <string name="invite_received">Accept a match of TicTacToe with %s ?</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_accept">Waiting Opponent accept the invite</string>
    <string name="waiting_move">Waiting opponent\'s move</string>
    <string name="winner">%s won the match</string>
    <string name="draw">It\'s a draw</string>
    <string name="message">message…</string>
    <string name="link_copied">Link Copied</string>
    <string name="history_title">History</string>


    <!--    Home Fragment-->

    <string name="player_connected">%s connected</string>
    <string name="name">Name</string>
    <string name="port">Port:</string>
    <string name="ip" translatable="false">IP</string>
    <string name="port_1027" translatable="false">1027</string>
    <string name="port_1028" translatable="false">1028</string>
    <string name="port_1029" translatable="false">1029</string>
    <string name="connect">Connect</string>
    <string name="create_server">Create server</string>
    <string name="server_already_initialized">Server already initialized</string>


    <!--    CreateServer Fragment-->

    <string name="create">Create</string>
    <string name="choose_port">Choose a port:</string>


    <!--    ServerBackgroundService-->

    <string name="player_disconnected">%s has disconnected</string>


    <!--    Menu Fragment-->

    <string name="profile">Profile</string>
    <string name="share_room">Share room</string>
    <string name="player_x_wins">Player X wins!</string>
    <string name="player_o_wins">Player O wins!</string>
    <string name="recording_audio">Recording…</string>


    <!--    ChatDetails Fragment-->

    <string name="participants">Participants</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="password">Password</string>
    <string name="Kick">kick</string>
    <string name="admin">Admin</string>
    <string name="warning">Ops, we are still working on it!</string>


    <!--    Profile Fragment-->

    <string name="profile_photo">Profile photo</string>
    <string name="generating_your_credential">Generating your credential</string>




</resources>